# blueprint

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  main.py  middleware.py  mytaskie.py  package-lock.json  pyproject.toml  server.py  tailwind.config.js  tide.toml
blueprint/: asgi.py  auth.py  blueprint.py  logger.py  middleware.py  prompt.py  settings.py  types.py  urls.py  utils.py  wsgi.py
database/postgres/: db.py  schema.py
database/redis/: redis.py
database/sqlite/: sqlite.py
main/: models.py  views.py
main/migrations/: 0001_initial.py
main/static/main/: input.css  style.css
main/static/main/scripts/: index.js  login.js  project.js  register.js  utills.js
main/templates/main/: index.html  layout.html  login.html  project.html  register.html
static/: index.js  input.css  style.css
taskie/: auth.py  database.py  middleware.py  prompt.py  taskie.py  types.py
templates/: auth.html  index.html  layout.html
